--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CEP SEARCH</title>
     <style>
-        body {
-          background-color: darkgray;
-        }
-  
-        h1 {
-          color: #fff;
-          font-family: Arial, Helvetica, sans-serif;
-        }
-      </style>
-</head>
-<body>
-    
-</body>
+      body {
+        background-color: darkgray;
+      }
+
+      h1 {
+        color: #fff;
+        font-family: Arial, Helvetica, sans-serif;
+      }
+    </style>
+  </head>
+  <body>
+    <form>
+      <label for="cep">CEP:</label>
+      <input type="text" name="cep" id="cep" placeholder="Digite o CEP aqui" />
+      <button id="submit" type="submit">consultar</button>
+    </form>
+    <div id="result"></div>
+  </body>
 </html>
