feat: function to Upper first letter

--- a/index.html
+++ b/index.html
@@ -32,5 +32,9 @@
       );
       return data;
     };
+
+    transformUpperCaseFirstLetter = (string) => {
+      return string.charAt(0).toUpperCase() + string.slice(1);
+    };
   </script>
 </html>
