--- a/index.html
+++ b/index.html
@@ -5,16 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CEP SEARCH</title>
-    <style>
-      body {
-        background-color: darkgray;
-      }
-
-      h1 {
-        color: #fff;
-        font-family: Arial, Helvetica, sans-serif;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <form>
@@ -24,37 +15,5 @@
     </form>
     <div id="result"></div>
   </body>
-  <script>
-    getDataFromApi = async (cep) => {
-      const api = 'https://api.postmon.com.br/v1/cep/';
-      const data = await fetch(`${api}${cep}`).then((response) =>
-        response.json(),
-      );
-      return data;
-    };
-
-    transformUpperCaseFirstLetter = (string) => {
-      return string.charAt(0).toUpperCase() + string.slice(1);
-    };
-
-    createAndFillElement = (element, text, data) => {
-        const object = document.createElement(element);
-        object.innerHTML = `${transformUpperCaseFirstLetter(text)}: ${data[text]}`;
-        return object;
-      };
-
-      document.getElementById('submit').addEventListener('click', async (e) => {
-        e.preventDefault();
-        const cep = document.getElementById('cep').value;
-        const result = document.getElementById('result');
-        const data = await getDataFromApi(cep);
-      
-        result.appendChild(createAndFillElement('p', 'logradouro', data));
-        result.appendChild(createAndFillElement('p', 'bairro', data));
-        result.appendChild(createAndFillElement('p', 'cidade', data));
-        result.appendChild(createAndFillElement('p', 'estado', data));
-        
-        result.appendChild(document.createElement('hr'));
-      });
-  </script>
+  <script src="script.js"></script>
 </html>
